--- a/text.html
+++ b/text.html
@@ -26,7 +26,7 @@ Blame me for the music via embedded video bit
     </div>
   </div>
   
-  <p id="start">A long time ago in a galaxy far, far away...&hellip;</p>
+  <p id="start">A long time ago in a galaxy far, far away&hellip;</p>
   
   <h1>STAR WARS</h1>
   
@@ -34,9 +34,9 @@ Blame me for the music via embedded video bit
     <div id="titlecontent">
   
       <p class="center">EPISODE I<br />
-        A NEW HOPE FOR CSS3</p>
+        A NEW HOPE FOR FDND</p>
   
-      <p>It is a period of vendor war.</p>
+      <p>Er gaan geruchten over een nieuwe frondender</p>
   
       <p>This is a demonstration of Star Wars-style scrolling 3D titles in CSS3. It possibly has no practical purpose whatsoever but it looks great and you can impress your friends.</p>
   
