--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="card__body">
         <h3 class="card__name">THOMAS</h3>
         <p class="card__job">Nerd bij de Mediamarkt</p>
-        <p class="card__bio">Servicemedewerker bij de Mediamarkt, trotse hondeneigenaar, amateur tennisser en een passie voor IT.</p>
+        <p class="card__bio">Servicemedewerker bij de Mediamarkt in Alkmaar, trotse hondeneigenaar, amateur tennisser en een passie voor IT.</p>
       </div>
       <div class="card__footer">
         <p class="card__date">Feb 28 2000</p>
