--- a/text.html
+++ b/text.html
@@ -37,8 +37,10 @@ Blame me for the music via embedded video bit
         A NEW HOPE FOR FDND</p>
   
       <p>Er gaan geruchten over een nieuwe frondender</p>
+
+      <p>Door de groei van webbureaus en grote bedrijven in Nederland is de vraag naar goeie IT'ers hard nodig.</p>
   
-      <p>This is a demonstration of Star Wars-style scrolling 3D titles in CSS3. It possibly has no practical purpose whatsoever but it looks great and you can impress your friends.</p>
+      <p>Geboren op 28 februari in 2000 in de prachtige stad Alkmaar. </p>
   
       <p>Before movie-buffs start ranting, I realize Star Wars wasn't the first to use crawling 3D titles, but few of you will remember the Flash Gordon series or the 1936 adaption of HG Wells' "Things to Come".</p>
   
