--- a/index.html
+++ b/index.html
@@ -10,32 +10,18 @@
 </head>
 
 <body>
-
-  <section class="wrapper">
-
-    <!-- BEGIN: card -->
-    <div class="card" data-effect="zoom">
-      <figure class="card__image">
-        <img src="assets/starwars_diorama.jpg" alt="Short description">
-      </figure>
-      <div class="card__body">
-        <h3 class="card__name">THOMAS</h3>
-        <p class="card__job">Nerd bij de Mediamarkt</p>
-        <p class="card__bio">Servicemedewerker bij de Mediamarkt in Alkmaar, trotse hondeneigenaar, amateur tennisser en
-          een passie voor IT.</p>
-      </div>
-      <div class="card__footer">
-        <p class="card__date">Feb 28 2000</p>
-      </div>
-      <a class="text__link" href="text.html">
-        <p class="card__link">Meer weten</p>
-      </a>
+<div class="main">
+  <div class="card_box">
+    <img id="slidein2" class="blob_background" src="assets/blob.svg">
+    <div class="name_box">
+      <h1 class="vertical">THOMAS.</h1>
     </div>
-    <!-- END: card -->
-
-  </section>
-
-  <script src="./scripts/script.js"></script>
+    <div id="slidein1" class="bio_box">
+      <p class="job_title">NERD BIJ DE MEDIAMARKT</p>
+      <p class="bio_text">Servicemedewerker bij de Mediamarkt in Alkmaar, trotse hondeneigenaar, amateur tennisser en een passie voor IT.</p>
+      <p class="birthdate">FEB 28, 2000</p>
+    </div>
+  </div>
+</div>
 </body>
-
 </html>
