--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div id="slidein1" class="bio_box">
       <p class="job_title">NERD BIJ DE MEDIAMARKT</p>
-      <p class="bio_text">Servicemedewerker bij de Mediamarkt in Alkmaar, trotse hondeneigenaar, amateur tennisser en een passie voor IT.</p>
+      <p class="bio_text">Servicemedewerker bij de Mediamarkt in Alkmaar, trotse hondeneigenaar, amateur tennisser met een passie voor IT.</p>
       <p class="birthdate">FEB 28, 2000</p>
     </div>
   </div>
