--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="card_box">
       <img id="slidein2" class="blob_background" src="assets/blob.svg">
       <div class="name_box">
-        <h1 class="vertical">THOMAS.</h1>
+        <h1 class="vertical">THOMAS<span class="pulse">.</span></h1>
       </div>
       <div id="slidein1" class="bio_box">
         <p class="job_title">NERD BIJ DE MEDIAMARKT</p>
