--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 </head>
 
 <body>
-  <div class="main">
-    <div class="card_box">
-      <img id="slidein2" class="blob_background" src="assets/blob.svg">
-      <div class="name_box">
-        <h1 class="vertical">THOMAS<span class="pulse">.</span></h1>
+  <!--<div id="container">-->
+    <div class="main">
+      <div class="card_box">
+        <img id="slidein2" class="blob_background" src="assets/blob.svg">
+        <div class="name_box">
+          <h1 class="vertical">THOMAS<span class="pulse">.</span></h1>
+        </div>
+        <div id="slidein1" class="bio_box">
+          <p class="job_title">NERD BIJ DE MEDIAMARKT</p>
+          <p class="bio_text">Servicemedewerker bij de Mediamarkt in Alkmaar, trotse hondeneigenaar, amateur tennisser met
+            een passie voor IT.</p>
+          <p class="birthdate">FEB 28, 2000</p>
+        </div>
       </div>
-      <div id="slidein1" class="bio_box">
-        <p class="job_title">NERD BIJ DE MEDIAMARKT</p>
-        <p class="bio_text">Servicemedewerker bij de Mediamarkt in Alkmaar, trotse hondeneigenaar, amateur tennisser met
-          een passie voor IT.</p>
-        <p class="birthdate">FEB 28, 2000</p>
-      </div>
-    </div>
+    <!--</div>-->
   </div>
+  <script src="./scripts/script.js"></script>
 </body>
-
 </html>
