Achtergrond en font veranderd

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FDND Visitekaartje</title>
   <link rel="stylesheet" href="./styles/style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 </head>
 
 <body>
   <!--<div id="container">-->
     <div class="main">
       <div class="card_box">
-        <img id="slidein2" class="blob_background" src="assets/blob.svg">
+        <!--<img id="slidein2" class="blob_background" src="assets/blob.svg">-->
         <div class="name_box">
-          <h1 class="vertical">THOMAS<span class="pulse">.</span></h1>
+          <h1 id="slidein2" class="vertical">THOMAS<span class="pulse">.</span></h1>
         </div>
         <div id="slidein1" class="bio_box">
           <p class="job_title">NERD BIJ DE MEDIAMARKT</p>
